# hexagonal-architecture-django

./: .gitignore  README.md  env_teste  pyproject.toml  pytest.ini  requirements.txt
adapters/driven/: cliente_repo.py
adapters/driver/: cliente_view.py
core/entities/: __init__.py  cliente.py  item.py  pedido.py
core/repositories/: cliente_repo.py  pedido_repo.py  produtos_repo.py
core/services/: contador_codigo_pedido.py
core/use_cases/: atualizar_produto.py  cadastrar_produto.py  criar_cliente.py  criar_pedido.py  excluir_produto.py  iniciar_pedido.py  listar_cliente.py  listar_pedido.py  listar_pedidos.py  listar_produtos.py
infrastructure/: exceptions.py  serializers.py  urls.py
infrastructure/database/: mongo_connection.py
infrastructure/repositories/: cliente_repo.py  pedido_repo.py  produtos_repo.py
infrastructure/services/: pagamento_api.py
infrastructure/views/: cliente_view.py  pagamento_view.py  pedido_view.py  produto_view.py
lanchonete/: settings.py  urls.py
tests/: conftest.py
tests/e2e/: test_fluxos.py
tests/integration/: test_pedido_repository.py
tests/unit/: test_cliente.py  test_cliente_view.py  test_criar_pedido.py  test_item.py  test_mongo_pedido_repository.py  test_pedido.py  test_produto.py
